[tool.poetry]
name = "stock-price-prediction"
version = "0.1.0"
description = ""
authors = ["Sherwin-14 <varghesesheriwn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
prophet = "^1.1.6"
yfinance = "^0.2.49"
streamlit = "^1.40.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
